[profile.bench]
debug = true
lto = true

[profile.release]
debug = true
lto = true

[workspace]
members = ["bfffs-core", "bfffs-fio", "bfffs", "isa-l"]
resolver = "2"

[patch.crates-io]
atomic_enum = { git = "https://github.com/asomers/atomic_enum.git", rev = "969354b" }
mio-aio = { git = "https://github.com/asomers/mio-aio.git", rev = "def63990b10"}
nix = { git = "https://github.com/asomers/nix.git", rev = "6df57c72"}
tokio-file = { git = "https://github.com/asomers/tokio-file.git", rev = "bc24a7438d3"}
