[profile.bench]
debug = true
lto = true

[profile.release]
debug = true
lto = true

[workspace]
members = ["bfffs-core", "bfffs-fio", "bfffs", "isa-l"]
resolver = "2"

[patch.crates-io]
atomic_enum = { git = "https://github.com/asomers/atomic_enum.git", rev = "969354b" }
mio-aio = { git = "https://github.com/asomers/mio-aio.git", rev = "4f3da6c"}
nix = { git = "https://github.com/nix-rust/nix.git", rev = "e7acaff"}
tokio-file = { git = "https://github.com/asomers/tokio-file.git", rev = "0ef95e9"}
